Added some changes

--- a/ansible_refarch/aap2_migrate/roles/migrate/tasks/10_setup_git_repo.yml
+++ b/ansible_refarch/aap2_migrate/roles/migrate/tasks/10_setup_git_repo.yml
@@ -25,7 +25,7 @@
 
 - name: Populate the Git credential store
   copy:
-    content: "{{ lookup('env','GITHUB_CRED_FILE') }}"
+    src: "{{ lookup('env','GITHUB_CRED_FILE') }}"
     dest: "{{ migrate_default_user_location }}/.git-credentials"
     
 - name: "Git repo: is it up-to-date?"
