--- a/ansible_refarch/aap2_migrate/roles/migrate/tasks/10_setup_git_repo.yml
+++ b/ansible_refarch/aap2_migrate/roles/migrate/tasks/10_setup_git_repo.yml
@@ -23,6 +23,10 @@
 - debug:
     msg: "{{ lookup('env','GITHUB_CRED_FILE') }}"
 
+- shell: pwd
+
+- shell: ls -la
+
 - name: Populate the Git credential store
   copy:
     src: "{{ lookup('env','GITHUB_CRED_FILE') }}"
