--- a/ansible_refarch/aap2_migrate/roles/migrate/tasks/10_setup_git_repo.yml
+++ b/ansible_refarch/aap2_migrate/roles/migrate/tasks/10_setup_git_repo.yml
@@ -27,6 +27,8 @@
 
 - shell: ls -la
 
+- shell: ansible --version
+
 - name: Populate the Git credential store
   copy:
     src: "{{ lookup('env','GITHUB_CRED_FILE') }}"
