--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,2 +1,4 @@
 collections:
 - name: ./ansible_refarch-aap2_migrate-1.0.0.tar.gz
+- source: /var/lib/awx/.ansible/collections/ansible_collections/ansible/controller
+  type: dir
